src/styles/style.scss
@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');

@import 'declarations';
@import 'bootstrap';
@import 'bootstrap-vue/src/index.scss';

html,
body {
  max-width: 100vw;
  overflow-x: hidden;
  position: relative;
}

.bg-overlay {
  background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.4));
}

.route-change-enter-active {
  animation: enter 400ms;
  animation-delay: 200ms;
  opacity: 0;
}

@keyframes enter {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.one-card {
  @include media-breakpoint-up(lg) {
    margin-left: auto;
    margin-right: auto;
    width: 50%;
  }
}

.card-enter-active {
  animation: card-anim 500ms ease-out forwards;
}

.card-leave-active {
  animation: card-anim 500ms ease-in reverse forwards;
}

@keyframes card-anim {
  from {
    opacity: 0;
    transform: translateY(50px);
  }
  to {
    opacity: 1;
    transform: none;
  }
}

